Bug 1846396 trim buffered ranges from MP4TrackDemuxer consistently with samples r=padenot

test_buffered.html uses gSeekTests https://searchfox.org/mozilla-central/rev/28bc51699a56f6fa4d0e4d3fe9cded581a70844d/dom/media/test/test_buffered.html#112

Differential Revision: https://phabricator.services.mozilla.com/D188074